# mpc-agent-wallet

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ERC7710DelegationManager.sol  MpcPaymaster.sol  MpcSmartAccount.sol  MpcSmartAccountFactory.sol
contracts/src/interfaces/: IDelayModule.sol  IERC7579Module.sol  IERC7710.sol  IEntryPoint.sol  IMpcPaymaster.sol  IMpcRecoveryModule.sol  IMpcSmartAccount.sol  ISessionKeyModule.sol  ISpendingLimitHook.sol
contracts/src/modules/: MpcDelayModule.sol  MpcRecoveryModule.sol  MpcSessionKeyModule.sol  MpcSpendingLimitHook.sol
contracts/test/: Base.t.sol
contracts/test/integration/: E2E.t.sol
contracts/test/unit/: MpcPaymaster.t.sol  MpcRecoveryModule.t.sol  MpcSessionKeyModule.t.sol  MpcSmartAccount.t.sol  MpcSpendingLimitHook.t.sol
crates/mpc-wallet-cli/: Cargo.toml
crates/mpc-wallet-cli/src/: main.rs
crates/mpc-wallet-core/: Cargo.toml
crates/mpc-wallet-core/src/: error.rs  lib.rs  policy.rs  storage.rs  types.rs
crates/mpc-wallet-core/src/chain/: mod.rs  solana.rs
crates/mpc-wallet-core/src/chain/evm/: aa.rs  mod.rs
crates/mpc-wallet-core/src/keygen/: dkg.rs  messages.rs  mod.rs  refresh.rs
crates/mpc-wallet-core/src/mpc/: memory.rs  mod.rs
crates/mpc-wallet-core/src/sign/: dsg.rs  messages.rs  mod.rs
crates/mpc-wallet-core/tests/: lib.rs
crates/mpc-wallet-core/tests/fuzz/: mod.rs  policy_fuzz.rs  signing_fuzz.rs
crates/mpc-wallet-core/tests/integration/: base_test.rs  full_flow_test.rs  mod.rs  multichain_test.rs
crates/mpc-wallet-core/tests/invariant/: mod.rs  wallet_invariant.rs
crates/mpc-wallet-core/tests/unit/: chain_adapter_test.rs  mod.rs  mpc_core_test.rs  policy_test.rs
crates/mpc-wallet-relay/: Cargo.toml
crates/mpc-wallet-relay/src/: approval.rs  client.rs  error.rs  lib.rs  message.rs  notification.rs  server.rs  session.rs  types.rs  webhook.rs
crates/mpc-wallet-wasm/: Cargo.toml
crates/mpc-wallet-wasm/src/: error.rs  keygen.rs  lib.rs  policy.rs  signing.rs  storage.rs  types.rs  utils.rs
deployments/: base-sepolia.json
docs/: PUBLISHING.md  README.md  SECURITY_CHECKLIST.md  architecture.md  integration-guide.md  security-model.md
docs/api-reference/: python.md  typescript.md
examples/basic-wallet/: README.md  package-lock.json  package.json
examples/basic-wallet/src/: index.ts  keygen.ts  signing.ts
examples/defi-agent/: README.md  package.json
examples/defi-agent/src/: agent.ts  index.ts
examples/defi-agent/src/strategies/: base.ts  rebalance.ts  yield.ts
examples/elizaos-plugin/: README.md  package.json  tsconfig.json
examples/elizaos-plugin/src/: index.ts  plugin.ts
examples/elizaos-plugin/src/__tests__/: actions.test.ts  test-utils.ts
examples/elizaos-plugin/src/actions/: balance.ts  policy.ts  send.ts  swap.ts
examples/langchain-tool/: README.md  requirements.txt
examples/langchain-tool/examples/: basic_agent.py
examples/langchain-tool/src/: __init__.py  agent.py  prompts.py  tools.py
examples/telegram-bot/: README.md  package.json
examples/telegram-bot/src/: bot.ts  index.ts
examples/telegram-bot/src/handlers/: approval.ts  callbacks.ts  commands.ts
examples/telegram-bot/src/relay/: client.ts
programs/mpc-spending-limit/: Anchor.toml  Cargo.toml
programs/mpc-spending-limit/src/: error.rs  lib.rs  state.rs
programs/mpc-spending-limit/src/instructions/: initialize.rs  mod.rs  record_spending.rs  update_limits.rs  validate_transfer.rs  whitelist.rs
scripts/: publish.sh
