[workspace]
resolver = "2"
members = [
    "crates/mpc-wallet-core",
    "crates/mpc-wallet-wasm",
    "crates/mpc-wallet-relay",
    "crates/mpc-wallet-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Cătălin Dinu"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kazopl/mpc-agent-wallet"
homepage = "https://github.com/Kazopl/mpc-agent-wallet"
documentation = "https://github.com/Kazopl/mpc-agent-wallet#readme"
description = "MPC-secured wallet SDK for AI agents"
keywords = ["mpc", "wallet", "threshold", "ecdsa", "ai-agent"]
categories = ["cryptography", "authentication", "web-programming"]

[workspace.dependencies]
# Cryptographic primitives
k256 = { version = "0.13", features = ["ecdsa", "sha256", "arithmetic"] }
elliptic-curve = { version = "0.13", features = ["sec1", "arithmetic", "alloc"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = { version = "1.5", features = ["pure"] }
hmac = "0.12"
aead = "0.5"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "zeroize"] }
ed25519-dalek = "2.0"
merlin = "3.0"
subtle = { version = "2.5", default-features = false, features = ["const-generics"] }
zeroize = { version = "1.8", features = ["derive"] }

# Encoding
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
bincode = "2.0.0-rc.3"

# BIP32 derivation
derivation-path = "0.2"

# Hashing
tiny-keccak = { version = "2.0", features = ["keccak"] }
ripemd = "0.1"
digest = "0.10"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Parallelism
rayon = "1.10"

# Randomness
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
async-trait = "0.1"
parking_lot = "0.12"

# Testing
proptest = "1.9"
tokio-test = "0.4"

# EVM / Alloy (using 0.x for stability - 1.x has breaking changes)
alloy-primitives = "0.8"
alloy-rlp = "0.3"
alloy-consensus = "0.6"
alloy-eips = "0.6"
alloy-rpc-types = "0.6"

# Solana (use v2.2 for zeroize compatibility with curve25519-dalek 4.x)
solana-sdk = "2.2"
spl-token = { version = "7.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0", features = ["no-entrypoint"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# WASM-specific release profile for smaller bundle size
[profile.release-wasm]
inherits = "release"
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1
