[package]
name = "mpc-wallet-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for MPC agent wallet testing"

[[bin]]
name = "mpc-wallet"
path = "src/main.rs"

[dependencies]
mpc-wallet-core = { version = "0.1.0", path = "../mpc-wallet-core" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
hex.workspace = true
serde_json.workspace = true
rand.workspace = true
