[package]
name = "mpc-wallet-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core MPC wallet library for AI agents with 2-of-3 threshold signing"
readme = "../../README.md"

[features]
default = ["multi-thread", "evm", "solana", "runtime"]
multi-thread = ["tokio/rt-multi-thread", "rayon"]
runtime = ["tokio", "futures-util", "reqwest", "dashmap"]
evm = ["alloy-primitives", "alloy-rlp", "alloy-consensus", "alloy-eips", "alloy-rpc-types"]
solana = ["solana-sdk", "spl-token", "spl-associated-token-account", "bincode1"]
aa = ["evm"]

[dependencies]
# Cryptographic primitives
k256.workspace = true
elliptic-curve.workspace = true
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true
hmac.workspace = true
aead.workspace = true
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
merlin.workspace = true
subtle.workspace = true
zeroize.workspace = true

# Encoding
hex.workspace = true
serde_json.workspace = true
base64.workspace = true
bs58.workspace = true

# BIP32
derivation-path.workspace = true
tiny-keccak.workspace = true
ripemd.workspace = true
digest.workspace = true

# Async (optional for WASM)
tokio = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Parallelism
rayon = { workspace = true, optional = true }

# Randomness
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Async
async-trait.workspace = true
dashmap = { workspace = true, optional = true }
parking_lot.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

# HTTP client for RPC (optional for WASM)
reqwest = { workspace = true, optional = true }

# EVM dependencies (optional)
alloy-primitives = { workspace = true, optional = true }
alloy-rlp = { workspace = true, optional = true }
alloy-consensus = { workspace = true, optional = true }
alloy-eips = { workspace = true, optional = true }
alloy-rpc-types = { workspace = true, optional = true }

# Solana dependencies (optional) - using v2.2 for zeroize compatibility
solana-sdk = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
spl-associated-token-account = { workspace = true, optional = true }
bincode1 = { package = "bincode", version = "1.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
proptest.workspace = true
tokio-test.workspace = true
