[package]
name = "mpc-wallet-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Message relay service for MPC agent wallet with approval flows"
readme = "../../README.md"

[features]
default = ["server"]
server = ["axum", "tower", "tower-http"]
client = ["reqwest", "tokio-tungstenite"]

[dependencies]
mpc-wallet-core = { version = "0.1.0", path = "../mpc-wallet-core", features = ["runtime"] }

# Cryptographic hashing
blake3 = { workspace = true }
hmac.workspace = true
sha2.workspace = true

# Async runtime (required for RwLock and async operations)
tokio = { workspace = true }
futures-util = { workspace = true }
async-trait.workspace = true

# Web framework (server)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# HTTP client (client)
reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
hex.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test.workspace = true
