[package]
name = "mpc-wallet-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "WASM bindings for MPC agent wallet"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
mpc-wallet-core = { version = "0.1.0", path = "../mpc-wallet-core", default-features = false }

# WASM bindings
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
js-sys = "0.3.76"
web-sys = { version = "0.3.76", features = ["console"] }

# Serialization for JS interop
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "2.0"

# Async runtime for WASM
futures = "0.3"

# Optional panic hook for better error messages in browser
console_error_panic_hook = { version = "0.1", optional = true }

# Crypto (pure Rust, no native deps)
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
# Note: profile.release settings are in workspace Cargo.toml
